fixed a bug that the text on smaller screen would go outside the container for now

--- a/index.css
+++ b/index.css
@@ -35,7 +35,6 @@ a:hover {
 
 .card {
   margin-bottom: 1rem;
-  max-height: 25rem;
 }
 
 .btn{
